--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,6 +1,9 @@
 $c-gray: #eee;
 
 $color-blue: #05c2df;
+$color-blue-dark: #07798b;
+
+$color-purple: #191536;
 
 $color-black: #05040b;
 $color-black-1: #000;
