--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -25,6 +25,5 @@ a {
   text-decoration: none;
   color: inherit;
 
-  @include hover(color, $color-blue);
-  @include hover(text-decoration, underline);
+  @include hover((color, text-decoration), ($color-blue, underline));
 }
