--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -21,6 +21,8 @@ $color-green: #008000;
 
 $color-white: #fff;
 
+$lang-switch-bg-color: #191536;
+
 $bg-gradient: linear-gradient(
   100.83deg,
   #191536 0.67%,
