--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2141,3 +2141,87 @@ body {
 }
 
 ////////////////////////////////////////////////////////////////////
+
+////////////////////////////////////////////////////////////////////
+/// HEADER VIDEO POPUP
+
+.header-video-popup {
+  visibility: hidden;
+  opacity: 0;
+
+  transition: opacity 0.3s;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100000;
+  width: 100%;
+  height: 100%;
+
+  backdrop-filter: brightness(50%);
+
+  &__close-button {
+    position: absolute;
+    z-index: 300000;
+
+    top: 15px;
+    right: 13px;
+
+    @media only screen and (max-width: 400px) {
+      top: -10px;
+    }
+
+    width: 17px;
+    height: 17px;
+
+    cursor: pointer;
+
+    &::after {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      content: "";
+      width: 24px;
+      height: 2px;
+      background-color: $color-blue;
+      transform: translate(-50%, -50%) rotate(45deg);
+    }
+
+    &::before {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      content: "";
+      width: 24px;
+      height: 2px;
+      background-color: $color-blue;
+      transform: translate(-50%, -50%) rotate(-45deg);
+    }
+  }
+
+  &__video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 200000;
+    width: 87.6%;
+    height: 48.6vw;
+
+    @media only screen and (max-width: 400px) {
+      width: 98%;
+      height: 50vh;
+    }
+  }
+
+  &__video iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
+////////////////////////////////////////////////////////////////////
