added menu-burger on targer button in header

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -4,6 +4,7 @@ $color-blue: #05c2df;
 $color-blue-dark: #07798b;
 
 $color-purple: #191536;
+$color-purple-dark: #110e25;
 
 $color-black: #05040b;
 $color-black-1: #000;
