--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -131,7 +131,9 @@ body {
 
     @media only screen and (max-width: 768px) {
       visibility: hidden;
-      
+      width: 38px;
+      cursor: pointer;
+
       &::after,
       &::before {
         visibility: visible;
@@ -147,6 +149,8 @@ body {
         height: 13px;
         border-top: 2px solid $color-white;
         border-bottom: 2px solid $color-white;
+
+        transition: transform 0.5s, border-top 0.3s;
       }
 
       &::before {
@@ -157,11 +161,31 @@ body {
         right: 0;
         transform: translateX(-15.5px) translateY(-50%);
         z-index: 2;
+        transition: transform 0.3s;
       }
-    }
 
-    @media only screen and (max-width: 540px) {
-      width: 49px;
+      z-index: 20000;
+
+      &--active {
+        position: fixed;
+        top: 34px;
+        right: 15px;
+
+        @media only screen and (max-width: 430px) {
+          top: 18px;
+          transform: translateY(-10px);
+        }
+      }
+
+      &--active::after {
+        transform: translateY(-60%) rotate(405deg);
+        border-top: none;
+      }
+
+      &--active::before {
+        width: 29px;
+        transform: translateY(-50%) rotate(-45deg) translateX(-4px);
+      }
     }
   }
 
@@ -212,6 +236,7 @@ body {
   }
 
   &__background-image {
+    user-select: none;
     position: absolute;
     right: 0;
     top: 0;
@@ -2221,6 +2246,87 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+  }
+}
+
+////////////////////////////////////////////////////////////////////
+
+////////////////////////////////////////////////////////////////////
+/// HEADER MENU ON TARGET TO MENU BURGER
+
+.header-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  transition: transform  0.3s, backdrop-filter 1s;
+  transform: translateX(100%);
+
+  &--active {
+    transform: translateX(0);
+    backdrop-filter: brightness(50%);
+  }
+
+  z-index: 10000;
+
+  height: 100%;
+  width: 100%;
+
+  &__wrapper {
+    width: 100%;
+    height: 568px;
+    background-color: $color-purple;
+  }
+
+  &__list {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.header-menu-list {
+  &__item {
+    display: flex;
+
+    &:first-child {
+      margin-top: 97px;
+    }
+
+    @include hover((background-color), ($color-purple-dark));
+
+    &:hover .header-menu-list__button {
+      transition: color 0.3s;
+      color: $color-blue;
+    }
+  }
+
+  &__link {
+    flex-basis: 100%;
+    font-family: Inter;
+    font-weight: 500;
+    font-size: 21px;
+    line-height: 130%;
+    padding: 11px 0;
+
+    padding-left: 155px;
+
+    text-decoration: none !important;
+  }
+
+  &__button {
+    flex-basis: 100%;
+    text-align: left;
+    padding: 11px 0;
+    cursor: pointer;
+    font-family: Inter;
+    font-weight: 500;
+    font-size: 21px;
+    line-height: 130%;
+    color: $color-white;
+    background-color: transparent;
+    border: none;
+    outline: none;
+
+    padding-left: 155px;
   }
 }
 
