--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -19,6 +19,23 @@ html {
 body {
   width: 100%;
   height: 100vh;
+
+  &::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  &::-webkit-scrollbar-track {
+    background-color: #05c2df;
+  }
+  
+  &::-webkit-scrollbar-thumb {
+    background-color: #999;
+    border-radius: 5px;
+  }
+  
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: #666;
+  }
 }
 
 a {
