--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2000,6 +2000,10 @@ body {
       padding: 0 34px;
     }
 
+    @media only screen and (max-width: 630px) {
+      padding: 0 15px;
+    }
+
     @media only screen and (max-width: 500px) {
       display: grid;
       grid-template-areas: "logo ."
@@ -2033,7 +2037,7 @@ body {
     }
 
     @media only screen and (max-width: 540px) {
-      min-width: 200px;
+      min-width: 210px;
     }
 
     @media only screen and (max-width: 500px) {
@@ -2273,8 +2277,27 @@ body {
 
   &__wrapper {
     width: 100%;
-    height: 568px;
+    max-height: 100%;
+    padding-bottom: 205px;
     background-color: $color-purple;
+    overflow-y: auto;
+
+    &::-webkit-scrollbar {
+      width: 10px;
+    }
+    
+    &::-webkit-scrollbar-track {
+      background-color: #05c2df;
+    }
+    
+    &::-webkit-scrollbar-thumb {
+      background-color: #999;
+      border-radius: 5px;
+    }
+    
+    &::-webkit-scrollbar-thumb:hover {
+      background-color: #666;
+    }
   }
 
   &__list {
