--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2191,11 +2191,17 @@ body {
     position: absolute;
     z-index: 300000;
 
-    top: 15px;
-    right: 13px;
+    top: -30px;
+    right: -30px;
+
+    @media only screen and (max-width: 600px) {
+      top: -30px;
+      right: -15px;
+    }
 
     @media only screen and (max-width: 400px) {
       top: -10px;
+      right: 15px;
     }
 
     width: 17px;
