--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -184,6 +184,28 @@ body {
         width: 29px;
         transform: translateY(-50%) rotate(-45deg) translateX(-4px);
       }
+
+      &--language-menu-active {
+        position: fixed;
+        top: 33px;
+        left: 33px;
+
+        @media only screen and (max-width: 500px) {
+          top: 11px;
+          left: 5px;
+        }
+
+        &::after {
+          width: 14.5px;
+          transform: translateY(-50%) rotate(45deg);
+          border-top: none;
+        }
+
+        &::before {
+          width: 14.5px;
+          transform: translateY(-7px) translateX(-4px) rotate(-45deg);
+        }
+      }
     }
   }
 
@@ -2199,8 +2221,16 @@ body {
       right: -15px;
     }
 
+    @media only screen and (max-height: 480px) {
+      top: 10px;
+    }
+
+    @media only screen and (max-height: 420px) {
+      top: 20px;
+    }
+
     @media only screen and (max-width: 400px) {
-      top: -10px;
+      top: -20px;
       right: 15px;
     }
 
@@ -2247,6 +2277,10 @@ body {
     z-index: 200000;
     width: 87.6%;
     height: 48.6vw;
+
+    @media only screen and (max-height: 420px) {
+      height: 100%;
+    }
 
     @media only screen and (max-width: 400px) {
       width: 98%;
@@ -2367,6 +2401,96 @@ body {
     background-color: transparent;
     border: none;
     outline: none;
+
+    padding-left: 155px;
+
+    @media only screen and (max-width: 500px) {
+      padding-left: 21px;
+    }
+  }
+}
+
+////////////////////////////////////////////////////////////////////
+
+////////////////////////////////////////////////////////////////////
+/// HEADER LANGUAGE MENU ON MOBILE 
+
+.header-language-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  transition: transform  0.3s, backdrop-filter 1s;
+  transform: translateX(100%);
+
+  &--active {
+    transform: translateX(0);
+    backdrop-filter: brightness(50%);
+  }
+
+  z-index: 10000;
+
+  height: 100%;
+  width: 100%;
+
+  &__wrapper {
+    width: 100%;
+    max-height: 100%;
+    padding-bottom: 12px;
+
+    @media only screen and (max-width: 500px) {
+      padding-bottom: 8px;
+    }
+
+    background-color: $color-purple;
+    overflow-y: auto;
+
+    &::-webkit-scrollbar {
+      width: 10px;
+    }
+    
+    &::-webkit-scrollbar-track {
+      background-color: #05c2df;
+    }
+    
+    &::-webkit-scrollbar-thumb {
+      background-color: #999;
+      border-radius: 5px;
+    }
+    
+    &::-webkit-scrollbar-thumb:hover {
+      background-color: #666;
+    }
+  }
+
+  &__list {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.list-header-language-menu {
+  &__item {
+    display: flex;
+
+    &:first-child {
+      margin-top: 97px;
+
+      @media only screen and (max-width: 500px) {
+        margin-top: 75px;
+      }
+    }
+
+    @include hover(
+      (background-color, color), 
+      ($color-purple-dark, $color-blue)
+    );
+
+    flex-basis: 100%;
+    font-family: Inter;
+    font-weight: 500;
+    font-size: 21px;
+    line-height: 130%;
+    padding: 11px 0;
 
     padding-left: 155px;
 
