--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -829,9 +829,16 @@ body {
       margin-right: 20px;
 
       grid-row-gap: 15px;
+
+      width: 340px;
+      max-height: 308px;
+
+      overflow: hidden;
+      position: relative;
     }
 
     @media only screen and (max-width: 600px) {
+      max-height: none;
       margin: 0;
     }
 
@@ -853,6 +860,17 @@ body {
 
     @media only screen and (max-width: 768px) {
       min-width: 340px;
+
+      position: absolute;
+      display: flex;
+      top: 0;
+      left: 0;
+    }
+
+    @media only screen and (max-width: 600px) {
+      position: relative;
+      left: 50%;
+      transform: translateX(-5%);
     }
   }
 
@@ -870,6 +888,8 @@ body {
   }
   
   &__video {
+    display: none;
+
     transition: all 0.5s;
 
     grid-area: video;
@@ -890,18 +910,30 @@ body {
       width: 340px;
     }
 
+    @media only screen and (max-width: 768px) {
+      display: block;
+
+      padding: 0 5px;
+    }
+
     @media only screen and (max-width: 600px) {
       width: 100%;
     }
 
     &--2 {
-      display: none;
       transform: translateY(-290px);
+
+      @media only screen and (max-width: 768px) {
+        transform: translateY(0);
+      }
     }
 
     &--3 {
-      display: none;
       transform: translateY(-580px);
+
+      @media only screen and (max-width: 768px) {
+        transform: translateY(0);
+      }
     }
   }
   
@@ -919,6 +951,10 @@ body {
 
     @media only screen and (max-width: 800px) {
       margin-right: 34px;
+    }
+
+    @media only screen and (max-width: 720px) {
+      margin-right: 15px;
     }
 
     @media only screen and (max-width: 600px) {
@@ -955,6 +991,17 @@ body {
 
   &__play-button {
     margin-bottom: 20px;
+
+    @media only screen and (max-width: 600px) {
+      position: relative;
+      left: 50%;
+      transform: translateX(-80%);
+    }
+
+    @media only screen and (max-width: 430px) {
+      left: 0;
+      transform: none;
+    }
   }
 
   &__dotted-slider {
@@ -966,7 +1013,7 @@ body {
   }
 }
 
-.top-aboutus--600 {
+.top-aboutus--690 {
   display: none;
 
   @media only screen and (max-width: 600px) {
@@ -988,6 +1035,15 @@ body {
 }
 
 .top-aboutus-dotted-slider {
+  @media only screen and (max-width: 768px) {
+    position: absolute;
+    bottom: 0;
+  }
+
+  @media only screen and (max-width: 600px) {
+    position: relative;
+  }
+
   &__dot {
     border-radius: 50%;
     height: 4px;
