--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -483,15 +483,26 @@ body {
   &__previous {
     user-select: none;
     transition: all 0.3s;
-    color: $color-grey-dark-1;
-    cursor: default;
+    cursor: pointer;
     transform: translateX(-10.3rem);
+
+    @include hover((color), ($color-blue));
+
+    &:active {
+      color: $color-blue-dark;
+    }
   }
 
   &__next {
     user-select: none;
     transition: all 0.3s;
     cursor: pointer;
+  
+    @include hover((color), ($color-blue));
+
+    &:active {
+      color: $color-blue-dark;
+    }
   }
 
   &__border-grey {
@@ -1074,8 +1085,13 @@ body {
   &__previous {
     user-select: none;
     transition: all 0.3s;
-    color: $color-grey-dark-1;
     cursor: pointer;
+
+    @include hover((color), ($color-blue));
+
+    &:active {
+      color: $color-blue-dark;
+    }
   }
 
   &__next {
@@ -1083,6 +1099,12 @@ body {
     transition: all 0.3s;
     cursor: pointer;
     transform: translateX(10.3rem);
+
+    @include hover((color), ($color-blue));
+
+    &:active {
+      color: $color-blue-dark;
+    }
   }
 
   &__border-grey {
