added video popup to aboutus section

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -681,6 +681,15 @@ body {
 
 .adventage {
   @include hover((transform), (scale(1.1)));
+
+  &:hover &__title {
+    color: $color-grey-light;
+  }
+
+  &:hover &__text {
+    color: $color-white;
+  }
+
   &__icon {
     margin-bottom: 21px;
 
@@ -690,6 +699,7 @@ body {
   }
   
   &__title {
+    transition: color 0.3s;
     margin-bottom: 20px;
 
     @media only screen and (max-width: 768px) {
@@ -702,6 +712,7 @@ body {
   }
   
   &__text {
+    transition: color 0.3s;
     max-width: 348px;
     text-align: center;
 
@@ -1725,6 +1736,14 @@ body {
 .item-whykatloco {
   @include hover((transform), (scale(1.05)));
 
+  &:hover &__title {
+    color: $color-grey-light;
+  }
+
+  &:hover &__text {
+    color: $color-white;
+  }
+
   &__icon {
     @media only screen and (max-width: 320px) {
       display: none;
@@ -1732,6 +1751,7 @@ body {
   }
 
   &__title {
+    transition: color 0.3s;
     &:not(:last-child) {
       margin-bottom: 18px;
 
@@ -1756,6 +1776,7 @@ body {
   }
 
   &__text {
+    transition: color 0.3s;
     max-width: 348px;
     text-align: center;
 
@@ -2579,3 +2600,112 @@ body {
 }
 
 ////////////////////////////////////////////////////////////////////
+
+///////////////////////////////////////////////////////////////////
+/// ABOUTUS VIDEO POPUP
+
+.aboutus-video-popup {
+  visibility: hidden;
+  opacity: 0;
+
+  transition: opacity 0.3s;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100000;
+  width: 100%;
+  height: 100%;
+
+  backdrop-filter: brightness(50%);
+
+  &__close-button {
+    position: absolute;
+    z-index: 300000;
+
+    top: -30px;
+    right: -30px;
+
+    @media only screen and (max-width: 600px) {
+      top: -30px;
+      right: -15px;
+    }
+
+    @media only screen and (max-height: 480px) {
+      top: 10px;
+    }
+
+    @media only screen and (max-height: 420px) {
+      top: 20px;
+    }
+
+    @media only screen and (max-width: 400px) {
+      top: -20px;
+      right: 15px;
+    }
+
+    width: 17px;
+    height: 17px;
+
+    cursor: pointer;
+
+    &::after {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      content: "";
+      width: 24px;
+      height: 2px;
+      background-color: $color-blue;
+      transform: translate(-50%, -50%) rotate(45deg);
+      transition: background-color 0.3s;
+    }
+
+    &::before {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      content: "";
+      width: 24px;
+      height: 2px;
+      background-color: $color-blue;
+      transform: translate(-50%, -50%) rotate(-45deg);
+      transition: background-color 0.3s;
+    }
+
+    &:hover::before,
+    &:hover::after {
+      background-color: $color-white;
+    }
+  }
+
+  &__video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 200000;
+    width: 87.6%;
+    height: 48.6vw;
+
+    @media only screen and (max-height: 420px) {
+      height: 100%;
+    }
+
+    @media only screen and (max-width: 400px) {
+      width: 98%;
+      height: 50vh;
+    }
+  }
+
+  &__video iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
+///////////////////////////////////////////////////////////////////
