fixed slider on resize and more small things

--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -25,7 +25,7 @@ body {
   }
   
   &::-webkit-scrollbar-track {
-    background-color: #05c2df;
+    background-color: black;
   }
   
   &::-webkit-scrollbar-thumb {
