--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -20,22 +20,7 @@ body {
   width: 100%;
   height: 100vh;
 
-  &::-webkit-scrollbar {
-    width: 10px;
-  }
-  
-  &::-webkit-scrollbar-track {
-    background-color: black;
-  }
-  
-  &::-webkit-scrollbar-thumb {
-    background-color: #999;
-    border-radius: 5px;
-  }
-  
-  &::-webkit-scrollbar-thumb:hover {
-    background-color: #666;
-  }
+  overflow: hidden;
 }
 
 a {
