--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,6 +16,30 @@ body {
   overflow: hidden;
 }
 
+.body-overflow {
+  scroll-behavior: smooth;
+  max-height: 100%;
+  overflow-y: scroll;
+  scroll-padding-left: 2px;
+
+  &::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  &::-webkit-scrollbar-track {
+    background-color: black;
+  }
+  
+  &::-webkit-scrollbar-thumb {
+    background-color: #999;
+    border-radius: 5px;
+  }
+  
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: #666;
+  }
+}
+
 ._container {
   max-width: 1452px;
   margin: 0 auto;
@@ -1606,6 +1630,10 @@ body {
     padding-bottom: 22px;
     background-color: $color-purple;
     border-radius: 4px;
+
+    &:hover {
+      transform: none;
+    }
   }
 
   &--hovered {
@@ -2110,7 +2138,7 @@ body {
   right: 100px;
 
   @include hover((filter), (brightness(3000%)));
-  transition: none;
+  transition: filter 0.2s;
 
   &:active {
     transform: translateY(1px);
@@ -2639,6 +2667,7 @@ body {
 
 .list-header-language-menu {
   &__item {
+    cursor: pointer;
     display: flex;
 
     &:first-child {
